tests/security/taintedFile/output.txt
ERROR: TaintedData - input.hack:1:19 - Data from a URL query string found its way to a filesystem call